[project]
name = "siem-analyzer"
version = "0.1.0"
description = "SIEM Intelligence Analyzer"
dependencies = [
    "redis>=4.5.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.9",
    "sendgrid>=6.11.0",
    "prometheus-client>=0.19.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"