[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = 'scripts/'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
known_first_party = ["src"]
skip = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=4",     # ← lower this now, raise it as you add tests
]


[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "faker>=24.0.0",
    "httpx>=0.27.0",       # required by respx
    "respx>=0.21.0",       # ← add this
    "coverage[toml]>=7.4.0",
]
